--- a/GoHub/server/package.json
+++ b/GoHub/server/package.json
@@ -21,6 +21,7 @@
     "morgan": "^1.9.1",
     "mysql2": "^1.7.0",
     "nodemon": "^1.19.2",
+    "passport": "^0.4.0",
     "sequelize": "^5.19.0"
   },
   "devDependencies": {
