--- a/GoHub/client/package.json
+++ b/GoHub/client/package.json
@@ -8,6 +8,7 @@
     "babel-eslint": "^10.0.3",
     "bootstrap": "^4.3.1",
     "precss": "^4.0.0",
+    "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-redux": "^7.1.1",
@@ -15,7 +16,8 @@
     "reactstrap": "^8.0.1",
     "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "uuid": "^3.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
