--- a/GoHub/server/package.json
+++ b/GoHub/server/package.json
@@ -22,6 +22,7 @@
     "mysql2": "^1.7.0",
     "nodemon": "^1.19.2",
     "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
     "sequelize": "^5.19.0"
   },
   "devDependencies": {
