--- a/GoHub/server/package.json
+++ b/GoHub/server/package.json
@@ -18,6 +18,7 @@
     "express": "^4.17.1",
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.1",
+    "loadash": "^1.0.0",
     "morgan": "^1.9.1",
     "mysql2": "^1.7.0",
     "nodemon": "^1.19.2",
